# ha-not-a-plc

./: .gitignore  CLAUDE.md  README.md  hacs.json  pyproject.toml  requirements-dev.txt
.claude/: settings.local.json
.github/workflows/: release.yml  test.yml  validate.yml
custom_components/not_a_plc/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  strings.json  websocket_api.py
custom_components/not_a_plc/engine/: __init__.py  errors.py  model.py  parser.py  scan.py
custom_components/not_a_plc/programs/: demo.json  render_demo.json  thermostat.json
custom_components/not_a_plc/schema/: program.schema.json
custom_components/not_a_plc/translations/: en.json
docs/: project-plan.md
tests/: __init__.py  conftest.py  test_config_flow.py  test_engine_action.py  test_engine_chain.py  test_engine_clock.py  test_engine_compare.py  test_engine_counter_latch.py  test_engine_fb.py  test_engine_model.py  test_engine_move.py  test_engine_scan.py  test_engine_temp.py  test_engine_timer.py  test_golden.py  test_init.py  test_integration.py  test_parser.py  test_schema.py  test_websocket.py
tests/golden/: analog_hysteresis.json  analog_hysteresis.trace.json  count_up.json  count_up.trace.json  edge_detect.json  edge_detect.trace.json  humidity_hysteresis.json  humidity_hysteresis.trace.json  off_delay.json  off_delay.trace.json  sr_latch.json  sr_latch.trace.json
