[project]
name = "ha-not-a-plc"
version = "0.0.1"
description = "A native, cyclic ladder-style logic engine for Home Assistant (not a PLC)."
readme = "README.md"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "ASYNC", "SIM", "RUF"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["custom_components.not_a_plc", "engine"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
# The engine is pure and fully typed; the HA layer imports untyped HA internals.
[[tool.mypy.overrides]]
module = "homeassistant.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
